[gd_scene load_steps=4 format=3 uid="uid://c2tx58327drr6"]

[ext_resource type="Script" uid="uid://chau2ban1pj26" path="res://debugInfo.gd" id="1_lbj1g"]
[ext_resource type="Script" uid="uid://cqh7apscryr77" path="res://Scripts/debugInfoHud.gd" id="1_v4rn8"]
[ext_resource type="LabelSettings" uid="uid://dmt6wef3sfm6d" path="res://Scenes/UI/Style/BasicFont.tres" id="2_v4rn8"]

[node name="DebugInfoHud" type="CanvasLayer"]
script = ExtResource("1_lbj1g")

[node name="Main" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4rn8")

[node name="PlayerState" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -33.0
grow_horizontal = 0
grow_vertical = 0
text = "State"
label_settings = ExtResource("2_v4rn8")

[node name="PlayerVelosityX" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -68.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
text = "State"
label_settings = ExtResource("2_v4rn8")

[node name="Fps" type="Label" parent="Main"]
unique_name_in_owner = true
offset_right = 61.0
offset_bottom = 33.0
text = "FPS:"
label_settings = ExtResource("2_v4rn8")

[node name="FrameTimes" type="Label" parent="Main"]
unique_name_in_owner = true
offset_top = 33.0
offset_right = 154.0
offset_bottom = 66.0
text = "Frame Time"
label_settings = ExtResource("2_v4rn8")

[node name="DrawCalls" type="Label" parent="Main"]
unique_name_in_owner = true
offset_top = 66.0
offset_right = 145.0
offset_bottom = 99.0
text = "Draw Calls"
label_settings = ExtResource("2_v4rn8")

[node name="Vram" type="Label" parent="Main"]
unique_name_in_owner = true
offset_top = 99.0
offset_right = 72.0
offset_bottom = 132.0
text = "Vram"
label_settings = ExtResource("2_v4rn8")
